--- a/timetable.html
+++ b/timetable.html
@@ -32,19 +32,21 @@
             <label for="upload">Upload previous File : </label>
             <button type="button" id="upload" name="upload" value="Upload" onclick="function1()">Upload</button>
 			<br>
-			<label for="weeks">How many Weeks in your timetable?</label>
-			<select id="weeks" name="weeks">
+			<label>How many Weeks in your timetable?
+			<!-- <select id="weeks" name="weeks"> -->
 				<button type="button" id="1week" name="1week" value="1" onclick="function1()">1</button>
 				<button type="button" id="2week" name="2week" value="2" class="active" onclick="function1()">2</button>
-			</select>
+			<!-- </select> -->
+		</label>
 			<br>
-			<label for="periods">How many Periods in a Day?</label>
-			<select id="periods" name="periods">
+			<label>How many Periods in a Day?
+			<!-- <select id="periods" name="periods"> -->
 				<button type="button" id="5periods" name="5periods" value="5" class="active" onclick="function1()">5</button>
 				<button type="button" id="6periods" name="6periods" value="6" onclick="function1()">6</button>
 				<button type="button" id="7periods" name="7periods" value="7" onclick="function1()">7</button>
 				<button type="button" id="8periods" name="8periods" value="8" onclick="function1()">8</button>
-			</select>
+			<!-- </select> -->
+			</label>
             
         </form>
     </div>
