--- a/timetable.html
+++ b/timetable.html
@@ -34,16 +34,17 @@
 			<br>
 			<label for="weeks">How many Weeks in your timetable?</label>
 			<select id="weeks" name="weeks">
-				<input type="button" id="1week" name="1week" value="1" onclick="function1()">1</input>
-				<input type="button" id="2week" name="2week" value="2" class="active" onclick="function1()">2</input>
+				<option value="1week" onclick="function1()">1</option>
+				<option value="2week" class="active" onclick="function1()">2</option>
 			</select>
 			<br>
 			<label for="periods">How many Periods in a Day?</label>
 			<select id="periods" name="periods">
-				<input type="button" id="5periods" name="5periods" value="5" class="active" onclick="function1()">5</input>
-				<input type="button" id="6periods" name="6periods" value="6" onclick="function1()">6</input>
-				<input type="button" id="7periods" name="7periods" value="7" onclick="function1()">7</input>
-				<input type="button" id="8periods" name="8periods" value="8" onclick="function1()">8</input>
+				<option value="5periods" class="active" onclick="function1()">5</option>
+				<option value="6periods" onclick="function1()">6</option>
+				<option value="7periods" onclick="function1()">7</option>
+				<option value="8periods" onclick="function1()">8</option>
+				<option value="5periods" onclick="function1()">5</option>
 			</select>
             
         </form>
