--- a/timetable.html
+++ b/timetable.html
@@ -32,123 +32,162 @@
             <label for="upload">Upload previous File : </label>
             <button type="button" id="upload" name="upload" value="Upload" onclick="function1()">Upload</button>
 			<br>
-			<label for="weeks">How many Weeks in your timetable?</label>
-			<select id="weeks" name="weeks">
-				<option value="1week" onclick="function1()">1</option>
-				<option value="2week" class="active" onclick="function1()">2</option>
-			</select>
+			<p>How many Weeks in your timetable?
+				<input type="radio" id="1week" name="weeks" value="1week" onclick="function1()">
+				<label for="1week" onclick="function1()">1</label>
+				<input type="radio" id="2week" name="weeks" value="2week" class="active" onclick="function1()">
+				<label for="2week" onclick="function1()" class="active">2</label>
+			</p>
 			<br>
-			<label for="periods">How many Periods in a Day?</label>
-			<select id="periods" name="periods">
-				<option value="5periods" class="active" onclick="function1()">5</option>
-				<option value="6periods" onclick="function1()">6</option>
-				<option value="7periods" onclick="function1()">7</option>
-				<option value="8periods" onclick="function1()">8</option>
-				<option value="5periods" onclick="function1()">5</option>
-			</select>
+			<p>How many Periods in a Day?
+				<input type="radio" id="5periods" name="periods" value="5periods" onclick="function1()">
+				<label for="5periods" onclick="function1()" class="active">5</label>
+				<input type="radio" id="6periods" name="periods" value="6periods" onclick="function1()">
+				<label for="6periods" onclick="function1()">6</label>
+				<input type="radio" id="7periods" name="periods" value="7periods" onclick="function1()">
+				<label for="7periods" onclick="function1()">7</label>
+				<input type="radio" id="8periods" name="periods" value="8periods" onclick="function1()">
+				<label for="8periods" onclick="function1()">8</label>
+			</p>
 			<br>
-			<label for="lunch" class="lunch">When is Lunch?</label>
-			<select id="lunch" name="lunch" class="lunch">
-				<!-- <option value="2regBefore1" class="active" onclick="function1()"> Before P1</option> -->
-				<option value="lunch1to2" onclick="function1()">Between P1 & P2</option>
-				<option value="lunch2to3" onclick="function1()">Between P2 & P3</option>
-				<option value="lunch3to4" onclick="function1()">Between P3 & P4</option>
-				<option value="lunch4to5" class="active" onclick="function1()">Between P4 & P5</option>
-				<option value="lunch5to6" onclick="function1()">Between P5 & P6</option>
-				<option value="lunch6to7" onclick="function1()">Between P6 & P7</option>
-				<option value="lunch7to8" onclick="function1()">Between P7 & P8</option>
-				<!-- <option value="2regAfterLast" onclick="function1()">After Last Period</option> -->
-			</select>
+			<p>When is Lunch?
+				<input type="radio" id="lunch1to2" name="lunch" value="lunch1to2" onclick="function1()">
+				<label for="lunch1to2" onclick="function1()">Between P1 & P2</label>
+				<input type="radio" id="lunch2to3" name="lunch" value="lunch2to3" onclick="function1()">
+				<label for="lunch2to3" onclick="function1()">Between P2 & P3</label>
+				<input type="radio" id="lunch3to4" name="lunch" value="lunch3to4" onclick="function1()">
+				<label for="lunch3to4" onclick="function1()">Between P3 & P4</label>
+				<input type="radio" id="lunch4to5" name="lunch" value="lunch4to5" onclick="function1()">
+				<label for="lunch4to5" class="active" onclick="function1()">Between P4 & P5</label>
+				<input type="radio" id="lunch5to6" name="lunch" value="lunch5to6" onclick="function1()">
+				<label for="lunch5to6" onclick="function1()">Between P5 & P6</label>
+				<input type="radio" id="lunch6to7" name="lunch" value="lunch6to7" onclick="function1()">
+				<label for="lunch6to7" onclick="function1()">Between P6 & P7</label>						
+				<input type="radio" id="lunch7to8" name="lunch" value="lunch7to8" onclick="function1()">
+				<label for="lunch7to8" onclick="function1()">Between P7 & P8</label>						
+			</p>
 			<br>
-			<label for="breaks">How many Breaks do you have?</label>
-			<select id="breaks" name="breaks">
-				<option value="0breaks" onclick="function1()">0</option>
-				<option value="1breaks" class="active" onclick="function1()">1</option>
-				<option value="2breaks" onclick="function1()">2</option>
-			</select>
+			<p>How many Breaks do you have?
+				<input type="radio" id="0breaks" name="breaks" value="0breaks" onclick="function1()">
+				<label for="0breaks" onclick="function1()">0</label>
+				<input type="radio" id="1breaks" name="breaks" value="1breaks" onclick="function1()">
+				<label for="1breaks" class="active" onclick="function1()">1</label>
+				<input type="radio" id="2breaks" name="breaks" value="2breaks" onclick="function1()">
+				<label for="2breaks" onclick="function1()">2</label>
+			</p>
 			<br>
-			<label for="break1" class="break1">When is the First?</label>
-			<select id="break1" name="break1" class="break1">
-				<!-- <option value="1regBefore1" class="active" onclick="function1()"> Before P1</option> -->
-				<option value="1break1to2" onclick="function1()">Between P1 & P2</option>
-				<option value="1break2to3" onclick="function1()">Between P2 & P3</option>
-				<option value="1break3to4" onclick="function1()">Between P3 & P4</option>
-				<option value="1break4to5" onclick="function1()">Between P4 & P5</option>
-				<option value="1break5to6" onclick="function1()">Between P5 & P6</option>
-				<option value="1break6to7" onclick="function1()">Between P6 & P7</option>
-				<option value="1break7to8" onclick="function1()">Between P7 & P8</option>
-				<!-- <option value="1breakAfterLast" onclick="function1()">After Last Period</option> -->
-			</select>
+			<p>When is the First?
+				<input type="radio" id="1break1to2" name="break1" value="1break1to2" onclick="function1()">
+				<label for="1break1to2" onclick="function1()">Between P1 & P2</label>
+				<input type="radio" id="1break2to3" name="break1" value="1break2to3" onclick="function1()">
+				<label for="1break2to3" class="active" onclick="function1()">Between P2 & P3</label>
+				<input type="radio" id="1break3to4" name="break1" value="1break3to4" onclick="function1()">
+				<label for="1break3to4" onclick="function1()">Between P3 & P4</label>
+				<input type="radio" id="1break4to5" name="break1" value="1break4to5" onclick="function1()">
+				<label for="1break4to5" onclick="function1()">Between P4 & P5</label>
+				<input type="radio" id="1break5to6" name="break1" value="1break5to6" onclick="function1()">
+				<label for="1break5to6" onclick="function1()">Between P5 & P6</label>
+				<input type="radio" id="1break6to7" name="break1" value="1break6to7" onclick="function1()">
+				<label for="1break6to7" onclick="function1()">Between P6 & P7</label>						
+				<input type="radio" id="1break7to8" name="break1" value="1break7to8" onclick="function1()">
+				<label for="1break7to8" onclick="function1()">Between P7 & P8</label>						
+			</p>
 			<br>
-			<label for="break2" class="break2">When is the Second?</label>
-			<select id="break2" name="break2" class="break2">
-				<!-- <option value="2regBefore1" class="active" onclick="function1()"> Before P1</option> -->
-				<option value="2break1to2" onclick="function1()">Between P1 & P2</option>
-				<option value="2break2to3" onclick="function1()">Between P2 & P3</option>
-				<option value="2break3to4" onclick="function1()">Between P3 & P4</option>
-				<option value="2break4to5" onclick="function1()">Between P4 & P5</option>
-				<option value="2break5to6" onclick="function1()">Between P5 & P6</option>
-				<option value="2break6to7" onclick="function1()">Between P6 & P7</option>
-				<option value="2break7to8" onclick="function1()">Between P7 & P8</option>
-				<!-- <option value="2regAfterLast" onclick="function1()">After Last Period</option> -->
-			</select>
+			<p>When is the Second?
+				<input type="radio" id="2break1to2" name="break2" value="2break1to2" onclick="function1()">
+				<label for="2break1to2" onclick="function1()">Between P1 & P2</label>
+				<input type="radio" id="2break2to3" name="break2" value="2break2to3" onclick="function1()">
+				<label for="2break2to3" onclick="function1()">Between P2 & P3</label>
+				<input type="radio" id="2break3to4" name="break2" value="2break3to4" onclick="function1()">
+				<label for="2break3to4" onclick="function1()">Between P3 & P4</label>
+				<input type="radio" id="2break4to5" name="break2" value="2break4to5" onclick="function1()">
+				<label for="2break4to5" onclick="function1()">Between P4 & P5</label>
+				<input type="radio" id="2break5to6" name="break2" value="2break5to6" onclick="function1()">
+				<label for="2break5to6" onclick="function1()">Between P5 & P6</label>
+				<input type="radio" id="2break6to7" name="break2" value="2break6to7" onclick="function1()">
+				<label for="2break6to7" class="active" onclick="function1()">Between P6 & P7</label>						
+				<input type="radio" id="2break7to8" name="break2" value="2break7to8" onclick="function1()">
+				<label for="2break7to8" onclick="function1()">Between P7 & P8</label>						
+			</p>
             <br>
-			<label for="regPeriods">How many Registration Periods in a Day?</label>
-			<select id="regPeriods" name="regPeriods">
-				<option value="0periods" onclick="function1()">0</option>
-				<option value="1periods" class="active" onclick="function1()">1</option>
-				<option value="2periods" onclick="function1()">2</option>
-			</select>
+			<p>How many Registration Periods in a Day?
+				<input type="radio" id="0periods" name="regPeriods" value="0periods" onclick="function1()">
+				<label for="0periods" onclick="function1()">0</label>
+				<input type="radio" id="1periods" name="regPeriods" value="1periods" onclick="function1()">
+				<label for="1periods" class="active" onclick="function1()">1</label>
+				<input type="radio" id="2periods" name="regPeriods" value="2periods" onclick="function1()">
+				<label for="2periods" onclick="function1()">2</label>
+			</p>
 			<br>
-			<label for="regPeriods1" class="regPeriods1">When is the First?</label>
-			<select id="regPeriods1" name="regPeriods1" class="regPeriods1">
-				<option value="1regBefore1" class="active" onclick="function1()"> Before P1</option>
-				<option value="1reg1to2" onclick="function1()">Between P1 & P2</option>
-				<option value="1reg2to3" onclick="function1()">Between P2 & P3</option>
-				<option value="1reg3to4" onclick="function1()">Between P3 & P4</option>
-				<option value="1reg4to5" onclick="function1()">Between P4 & P5</option>
-				<option value="1reg5to6" onclick="function1()">Between P5 & P6</option>
-				<option value="1reg6to7" onclick="function1()">Between P6 & P7</option>
-				<option value="1reg7to8" onclick="function1()">Between P7 & P8</option>
-				<option value="1regAfterLast" onclick="function1()">After Last Period</option>
-			</select>
+			<p>When is the First?
+				<input type="radio" id="1regBefore1" name="regPeriods1" value="1regBefore1" onclick="function1()">
+				<label for="1regBefore1" class="active" onclick="function1()">Before P1</label>
+				<input type="radio" id="1reg1to2" name="regPeriods1" value="1reg1to2" onclick="function1()">
+				<label for="1reg1to2" onclick="function1()">Between P1 & P2</label>
+				<input type="radio" id="1reg2to3" name="regPeriods1" value="1reg2to3" onclick="function1()">
+				<label for="1reg2to3" class="active" onclick="function1()">Between P2 & P3</label>
+				<input type="radio" id="1reg3to4" name="regPeriods1" value="1reg3to4" onclick="function1()">
+				<label for="1reg3to4" onclick="function1()">Between P3 & P4</label>
+				<input type="radio" id="1reg4to5" name="regPeriods1" value="1reg4to5" onclick="function1()">
+				<label for="1reg4to5" onclick="function1()">Between P4 & P5</label>
+				<input type="radio" id="1reg5to6" name="regPeriods1" value="1reg5to6" onclick="function1()">
+				<label for="1reg5to6" onclick="function1()">Between P5 & P6</label>
+				<input type="radio" id="1reg6to7" name="regPeriods1" value="1reg6to7" onclick="function1()">
+				<label for="1reg6to7" onclick="function1()">Between P6 & P7</label>						
+				<input type="radio" id="1reg7to8" name="regPeriods1" value="1reg7to8" onclick="function1()">
+				<label for="1reg7to8" onclick="function1()">Between P7 & P8</label>						
+				<input type="radio" id="1regAfterLast" name="regPeriods1" value="1regAfterLast" onclick="function1()">
+				<label for="1regAfterLast" onclick="function1()">After Last Period</label>	
+			</p>
 			<br>
-			<label for="regBreak1" class="regBreak1">Before or after Break?</label>
-			<select id="regBreak1" name="regBreak1" class="regBreak1">
-				<option value="1regBeforeBreak" class="active" onclick="function1()"> Before</option>
-				<option value="1regAfterBreak" onclick="function1()">After</option>
-			</select>
+			<p>Before or after Break?
+				<input type="radio" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" onclick="function1()">
+				<label for="1regBeforeBreak" onclick="function1()">Before</label>
+				<input type="radio" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" onclick="function1()">
+				<label for="1regAfterBreak" class="active" onclick="function1()">After</label>
+			</p>
 			<br>
-			<label for="regLunch1" class="regLunch1">Before or after Lunch?</label>
-			<select id="regLunch1" name="regLunch1" class="regLunch1">
-				<option value="1regBeforeLunch" class="active" onclick="function1()"> Before</option>
-				<option value="1regAfterLunch" onclick="function1()">After</option>
-			</select>
+			<p>Before or after Lunch?
+				<input type="radio" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" onclick="function1()">
+				<label for="1regBeforeLunch" onclick="function1()">Before</label>
+				<input type="radio" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" onclick="function1()">
+				<label for="1regAfterLunch" class="active" onclick="function1()">After</label>
+			</p>
 			<br>
-			<label for="regPeriods2" class="regPeriods2">When is the Second?</label>
-			<select id="regPeriods2" name="regPeriods2" class="regPeriods2">
-				<!-- <option value="2regBefore1" class="active" onclick="function1()"> Before P1</option> -->
-				<option value="2reg1to2" onclick="function1()">Between P1 & P2</option>
-				<option value="2reg2to3" onclick="function1()">Between P2 & P3</option>
-				<option value="2reg3to4" onclick="function1()">Between P3 & P4</option>
-				<option value="2reg4to5" onclick="function1()">Between P4 & P5</option>
-				<option value="2reg5to6" onclick="function1()">Between P5 & P6</option>
-				<option value="2reg6to7" onclick="function1()">Between P6 & P7</option>
-				<option value="2reg7to8" onclick="function1()">Between P7 & P8</option>
-				<option value="2regAfterLast" onclick="function1()">After Last Period</option>
-			</select>
+			<p>When is the Second?
+				<input type="radio" id="2regBefore1" name="regPeriods2" value="2regBefore1" onclick="function1()">
+				<label for="2regBefore1" class="active" onclick="function1()">Before P1</label>
+				<input type="radio" id="2reg1to2" name="regPeriods2" value="2reg1to2" onclick="function1()">
+				<label for="2reg1to2" onclick="function1()">Between P1 & P2</label>
+				<input type="radio" id="2reg2to3" name="regPeriods2" value="2reg2to3" onclick="function1()">
+				<label for="2reg2to3" class="active" onclick="function1()">Between P2 & P3</label>
+				<input type="radio" id="2reg3to4" name="regPeriods2" value="2reg3to4" onclick="function1()">
+				<label for="2reg3to4" onclick="function1()">Between P3 & P4</label>
+				<input type="radio" id="2reg4to5" name="regPeriods2" value="2reg4to5" onclick="function1()">
+				<label for="2reg4to5" onclick="function1()">Between P4 & P5</label>
+				<input type="radio" id="2reg5to6" name="regPeriods2" value="2reg5to6" onclick="function1()">
+				<label for="2reg5to6" onclick="function1()">Between P5 & P6</label>
+				<input type="radio" id="2reg6to7" name="regPeriods2" value="2reg6to7" onclick="function1()">
+				<label for="2reg6to7" onclick="function1()">Between P6 & P7</label>						
+				<input type="radio" id="2reg7to8" name="regPeriods2" value="2reg7to8" onclick="function1()">
+				<label for="2reg7to8" onclick="function1()">Between P7 & P8</label>						
+				<input type="radio" id="2regAfterLast" name="regPeriods2" value="2regAfterLast" onclick="function1()">
+				<label for="2regAfterLast" onclick="function1()">After Last Period</label>	
+			</p>
 			<br>
-			<label for="regBreak2" class="regBreak2">Before or after Break?</label>
-			<select id="regBreak2" name="regBreak2" class="regBreak2">
-				<option value="2regBeforeBreak" class="active" onclick="function1()"> Before</option>
-				<option value="2regAfterBreak" onclick="function1()">After</option>
-			</select>
+			<p>Before or after Break?
+				<input type="radio" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" onclick="function1()">
+				<label for="2regBeforeBreak" onclick="function1()">Before</label>
+				<input type="radio" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" onclick="function1()">
+				<label for="2regAfterBreak" class="active" onclick="function1()">After</label>
+			</p>
 			<br>
-			<label for="regLunch2" class="regLunch2">Before or after Lunch?</label>
-			<select id="regLunch2" name="regLunch2" class="regLunch2">
-				<option value="2regBeforeLunch" class="active" onclick="function1()"> Before</option>
-				<option value="2regAfterLunch" onclick="function1()">After</option>
-			</select>
+			<p>Before or after Lunch?
+				<input type="radio" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" onclick="function1()">
+				<label for="2regBeforeLunch" onclick="function1()">Before</label>
+				<input type="radio" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" onclick="function1()">
+				<label for="2regAfterLunch" class="active" onclick="function1()">After</label>
+			</p>
 			<br>
 			<p>Check your Timetable:</p>
 			<br>
