basic styling add & double > mark taken from html

--- a/timetable.html
+++ b/timetable.html
@@ -109,7 +109,7 @@
 			</p>
 			<br>
 			<p>When is the Second?
-				<button type="button" id="2regBefore1" name="regPeriods2" value="2regBefore1" onclick="function1()">>Before P1</button>
+				<button type="button" id="2regBefore1" name="regPeriods2" value="2regBefore1" onclick="function1()">Before P1</button>
 				<button type="button" id="2reg1to2" name="regPeriods2" value="2reg1to2" onclick="function1()">Between P1 & P2</button>
 				<button type="button" id="2reg2to3" name="regPeriods2" value="2reg2to3" onclick="function1()">Between P2 & P3</button>
 				<button type="button" id="2reg3to4" name="regPeriods2" value="2reg3to4" onclick="function1()">Between P3 & P4</button>
