--- a/timetable.html
+++ b/timetable.html
@@ -19,12 +19,24 @@
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
 </head>
 <body id="top">
-    <nav class = "nav" id="nav">
-		<a class="navActive" href='timetable.html'>Timetable</a>
-		<a href='subjects.html'>Subjects</a>
-		<a href='teachers.html'>Teachers</a>
-		<a href='classes.html'>Classes</a>
-		<a href='analysis.html'>Analysis</a>
+    <nav class="nav" id="nav">
+		<ul>
+			<li id="navActive">
+				<a href='timetable.html'>Timetable</a>
+			</li>
+			<li>
+				<a href='subjects.html'>Subjects</a>
+			</li>
+			<li>
+				<a href='teachers.html'>Teachers</a>
+			</li>
+			<li>
+				<a href='classes.html'>Classes</a>
+			</li>
+			<li>
+				<a href='analysis.html'>Analysis</a>
+			</li>
+		</ul>
 	</nav>
 
     <div class="timetablePage">
