Separate Nav bar from Main page content

--- a/timetable.html
+++ b/timetable.html
@@ -39,7 +39,7 @@
 		</ul>
 	</nav>
 
-    <div class="timetablePage">
+    <div class="timetablePage mainPage">
         <form>
             <label for="upload">Upload previous File : </label>
             <button type="button" id="upload" name="upload" value="Upload" onclick="function1()">Upload</button>
