Form Spacing Adusted

--- a/timetable.html
+++ b/timetable.html
@@ -44,107 +44,109 @@
             <label for="upload">Upload previous File : </label>
             <button type="button" id="upload" name="upload" value="Upload" onclick="function1()">Upload</button>
 			<br>
-			<p>How many Weeks in your timetable?
-				<button type="button" id="1week" name="weeks" value="1week" onclick="function1()">1</button>
-				<button type="button" id="2week" name="weeks" value="2week" class="active" onclick="function1()">2</button>
-			</p>
 			<br>
-			<p>How many Periods in a Day?
-				<button type="button" id="5periods" name="periods" value="5periods" class="active" onclick="function1()">5</button>
-				<button type="button" id="6periods" name="periods" value="6periods" onclick="function1()">6</button>
-				<button type="button" id="7periods" name="periods" value="7periods" onclick="function1()">7</button>
-				<button type="button" id="8periods" name="periods" value="8periods" onclick="function1()">8</button>
-			</p>
+			<p>How many Weeks in your timetable?</p>
+			<button type="button" id="1week" name="weeks" value="1week" onclick="function1()">1</button>
+			<button type="button" id="2week" name="weeks" value="2week" class="active" onclick="function1()">2</button>
 			<br>
-			<p>When is Lunch?
-				<button type="button" id="lunch1to2" name="lunch" value="lunch1to2" onclick="function1()">Between P1 & P2</button>
-				<button type="button" id="lunch2to3" name="lunch" value="lunch2to3" onclick="function1()">Between P2 & P3</button>
-				<button type="button" id="lunch3to4" name="lunch" value="lunch3to4" onclick="function1()">Between P3 & P4</button>
-				<button type="button" id="lunch4to5" name="lunch" value="lunch4to5" class="active" onclick="function1()">Between P4 & P5</button>
-				<button type="button" id="lunch5to6" name="lunch" value="lunch5to6" onclick="function1()">Between P5 & P6</button>
-				<button type="button" id="lunch6to7" name="lunch" value="lunch6to7" onclick="function1()">Between P6 & P7</button>						
-				<button type="button" id="lunch7to8" name="lunch" value="lunch7to8" onclick="function1()">Between P7 & P8</button>						
-			</p>
 			<br>
-			<p>How many Breaks do you have?
-				<button type="button" id="0breaks" name="breaks" value="0breaks" onclick="function1()">0</button>
-				<button type="button" id="1breaks" name="breaks" value="1breaks" class="active" onclick="function1()">1</button>
-				<button type="button" id="2breaks" name="breaks" value="2breaks" onclick="function1()">2</button>
-			</p>
+			<p>How many Periods in a Day?</p>
+			<button type="button" id="5periods" name="periods" value="5periods" class="active" onclick="function1()">5</button>
+			<button type="button" id="6periods" name="periods" value="6periods" onclick="function1()">6</button>
+			<button type="button" id="7periods" name="periods" value="7periods" onclick="function1()">7</button>
+			<button type="button" id="8periods" name="periods" value="8periods" onclick="function1()">8</button>
 			<br>
-			<p>When is the First?
-				<button type="button" id="1break1to2" name="break1" value="1break1to2" onclick="function1()">Between P1 & P2</button>
-				<button type="button" id="1break2to3" name="break1" value="1break2to3" class="active" onclick="function1()">Between P2 & P3</button>
-				<button type="button" id="1break3to4" name="break1" value="1break3to4" onclick="function1()">Between P3 & P4</button>
-				<button type="button" id="1break4to5" name="break1" value="1break4to5" onclick="function1()">Between P4 & P5</button>
-				<button type="button" id="1break5to6" name="break1" value="1break5to6" onclick="function1()">Between P5 & P6</button>
-				<button type="button" id="1break6to7" name="break1" value="1break6to7" onclick="function1()">Between P6 & P7</button>						
-				<button type="button" id="1break7to8" name="break1" value="1break7to8" onclick="function1()">Between P7 & P8</button>						
-			</p>
 			<br>
-			<p>When is the Second?
-				<button type="button" id="2break1to2" name="break2" value="2break1to2" onclick="function1()">Between P1 & P2</button>
-				<button type="button" id="2break2to3" name="break2" value="2break2to3" onclick="function1()">Between P2 & P3</button>
-				<button type="button" id="2break3to4" name="break2" value="2break3to4" onclick="function1()">Between P3 & P4</button>
-				<button type="button" id="2break4to5" name="break2" value="2break4to5" onclick="function1()">Between P4 & P5</button>
-				<button type="button" id="2break5to6" name="break2" value="2break5to6" onclick="function1()">Between P5 & P6</button>
-				<button type="button" id="2break6to7" name="break2" value="2break6to7" class="active" onclick="function1()">Between P6 & P7</button>						
-				<button type="button" id="2break7to8" name="break2" value="2break7to8" onclick="function1()">Between P7 & P8</button>						
-			</p>
+			<p>When is Lunch?</p>
+			<button type="button" id="lunch1to2" name="lunch" value="lunch1to2" onclick="function1()">Between P1 & P2</button>
+			<button type="button" id="lunch2to3" name="lunch" value="lunch2to3" onclick="function1()">Between P2 & P3</button>
+			<button type="button" id="lunch3to4" name="lunch" value="lunch3to4" onclick="function1()">Between P3 & P4</button>
+			<button type="button" id="lunch4to5" name="lunch" value="lunch4to5" class="active" onclick="function1()">Between P4 & P5</button>
+			<button type="button" id="lunch5to6" name="lunch" value="lunch5to6" onclick="function1()">Between P5 & P6</button>
+			<button type="button" id="lunch6to7" name="lunch" value="lunch6to7" onclick="function1()">Between P6 & P7</button>						
+			<button type="button" id="lunch7to8" name="lunch" value="lunch7to8" onclick="function1()">Between P7 & P8</button>						
+			<br>
+			<br>
+			<p>How many Breaks do you have?</p>
+			<button type="button" id="0breaks" name="breaks" value="0breaks" onclick="function1()">0</button>
+			<button type="button" id="1breaks" name="breaks" value="1breaks" class="active" onclick="function1()">1</button>
+			<button type="button" id="2breaks" name="breaks" value="2breaks" onclick="function1()">2</button>
+			<br>
+			<br>
+			<p>When is the First?</p>
+			<button type="button" id="1break1to2" name="break1" value="1break1to2" onclick="function1()">Between P1 & P2</button>
+			<button type="button" id="1break2to3" name="break1" value="1break2to3" class="active" onclick="function1()">Between P2 & P3</button>
+			<button type="button" id="1break3to4" name="break1" value="1break3to4" onclick="function1()">Between P3 & P4</button>
+			<button type="button" id="1break4to5" name="break1" value="1break4to5" onclick="function1()">Between P4 & P5</button>
+			<button type="button" id="1break5to6" name="break1" value="1break5to6" onclick="function1()">Between P5 & P6</button>
+			<button type="button" id="1break6to7" name="break1" value="1break6to7" onclick="function1()">Between P6 & P7</button>						
+			<button type="button" id="1break7to8" name="break1" value="1break7to8" onclick="function1()">Between P7 & P8</button>						
+			<br>
+			<br>
+			<p>When is the Second?</p>
+			<button type="button" id="2break1to2" name="break2" value="2break1to2" onclick="function1()">Between P1 & P2</button>
+			<button type="button" id="2break2to3" name="break2" value="2break2to3" onclick="function1()">Between P2 & P3</button>
+			<button type="button" id="2break3to4" name="break2" value="2break3to4" onclick="function1()">Between P3 & P4</button>
+			<button type="button" id="2break4to5" name="break2" value="2break4to5" onclick="function1()">Between P4 & P5</button>
+			<button type="button" id="2break5to6" name="break2" value="2break5to6" onclick="function1()">Between P5 & P6</button>
+			<button type="button" id="2break6to7" name="break2" value="2break6to7" class="active" onclick="function1()">Between P6 & P7</button>						
+			<button type="button" id="2break7to8" name="break2" value="2break7to8" onclick="function1()">Between P7 & P8</button>						
             <br>
-			<p>How many Registration Periods in a Day?
-				<button type="button" id="0periods" name="regPeriods" value="0periods" onclick="function1()">0</button>
-				<button type="button" id="1periods" name="regPeriods" value="1periods" class="active" onclick="function1()">1</button>
-				<button type="button" id="2periods" name="regPeriods" value="2periods" onclick="function1()">2</button>
-			</p>
+            <br>
+			<p>How many Registration Periods in a Day?</p>
+			<button type="button" id="0periods" name="regPeriods" value="0periods" onclick="function1()">0</button>
+			<button type="button" id="1periods" name="regPeriods" value="1periods" class="active" onclick="function1()">1</button>
+			<button type="button" id="2periods" name="regPeriods" value="2periods" onclick="function1()">2</button>
 			<br>
-			<p>When is the First?
-				<button type="button" id="1regBefore1" name="regPeriods1" value="1regBefore1" class="active" onclick="function1()">Before P1</button>
-				<button type="button" id="1reg1to2" name="regPeriods1" value="1reg1to2" onclick="function1()">Between P1 & P2</button>
-				<button type="button" id="1reg2to3" name="regPeriods1" value="1reg2to3" onclick="function1()">Between P2 & P3</button>
-				<button type="button" id="1reg3to4" name="regPeriods1" value="1reg3to4" onclick="function1()">Between P3 & P4</button>
-				<button type="button" id="1reg4to5" name="regPeriods1" value="1reg4to5" onclick="function1()">Between P4 & P5</button>
-				<button type="button" id="1reg5to6" name="regPeriods1" value="1reg5to6" onclick="function1()">Between P5 & P6</button>
-				<button type="button" id="1reg6to7" name="regPeriods1" value="1reg6to7" onclick="function1()">Between P6 & P7</button>						
-				<button type="button" id="1reg7to8" name="regPeriods1" value="1reg7to8" onclick="function1()">Between P7 & P8</button>						
-				<button type="button" id="1regAfterLast" name="regPeriods1" value="1regAfterLast" onclick="function1()">After Last Period</button>	
-			</p>
 			<br>
-			<p>Before or after Break?
-				<button type="button" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" onclick="function1()">Before</button>
-				<button type="button" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" class="active" onclick="function1()">After</button>
-			</p>
+			<p>When is the First?</p>
+			<button type="button" id="1regBefore1" name="regPeriods1" value="1regBefore1" class="active" onclick="function1()">Before P1</button>
+			<button type="button" id="1reg1to2" name="regPeriods1" value="1reg1to2" onclick="function1()">Between P1 & P2</button>
+			<button type="button" id="1reg2to3" name="regPeriods1" value="1reg2to3" onclick="function1()">Between P2 & P3</button>
+			<button type="button" id="1reg3to4" name="regPeriods1" value="1reg3to4" onclick="function1()">Between P3 & P4</button>
+			<button type="button" id="1reg4to5" name="regPeriods1" value="1reg4to5" onclick="function1()">Between P4 & P5</button>
+			<button type="button" id="1reg5to6" name="regPeriods1" value="1reg5to6" onclick="function1()">Between P5 & P6</button>
+			<button type="button" id="1reg6to7" name="regPeriods1" value="1reg6to7" onclick="function1()">Between P6 & P7</button>						
+			<button type="button" id="1reg7to8" name="regPeriods1" value="1reg7to8" onclick="function1()">Between P7 & P8</button>						
+			<button type="button" id="1regAfterLast" name="regPeriods1" value="1regAfterLast" onclick="function1()">After Last Period</button>	
 			<br>
-			<p>Before or after Lunch?
-				<button type="button" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" onclick="function1()">Before</button>
-				<button type="button" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" class="active" onclick="function1()">After</button>
-			</p>
 			<br>
-			<p>When is the Second?
-				<button type="button" id="2regBefore1" name="regPeriods2" value="2regBefore1" onclick="function1()">Before P1</button>
-				<button type="button" id="2reg1to2" name="regPeriods2" value="2reg1to2" onclick="function1()">Between P1 & P2</button>
-				<button type="button" id="2reg2to3" name="regPeriods2" value="2reg2to3" onclick="function1()">Between P2 & P3</button>
-				<button type="button" id="2reg3to4" name="regPeriods2" value="2reg3to4" onclick="function1()">Between P3 & P4</button>
-				<button type="button" id="2reg4to5" name="regPeriods2" value="2reg4to5" onclick="function1()">Between P4 & P5</button>
-				<button type="button" id="2reg5to6" name="regPeriods2" value="2reg5to6" onclick="function1()">Between P5 & P6</button>
-				<button type="button" id="2reg6to7" name="regPeriods2" value="2reg6to7" class="active" onclick="function1()">Between P6 & P7</button>						
-				<button type="button" id="2reg7to8" name="regPeriods2" value="2reg7to8" onclick="function1()">Between P7 & P8</button>						
-				<button type="button" id="2regAfterLast" name="regPeriods2" value="2regAfterLast" onclick="function1()">After Last Period</button>	
-			</p>
+			<p>Before or after Break?</p>
+			<button type="button" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" onclick="function1()">Before</button>
+			<button type="button" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" class="active" onclick="function1()">After</button>
 			<br>
-			<p>Before or after Break?
-				<button type="button" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" onclick="function1()">Before</button>
-				<button type="button" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" class="active" onclick="function1()">After</button>
-			</p>
 			<br>
-			<p>Before or after Lunch?
-				<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" onclick="function1()">Before</button>
-				<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="active" onclick="function1()">After</button>
-			</p>
+			<p>Before or after Lunch?</p>
+			<button type="button" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" onclick="function1()">Before</button>
+			<button type="button" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" class="active" onclick="function1()">After</button>
+			<br>
+			<br>
+			<p>When is the Second?</p>
+			<button type="button" id="2regBefore1" name="regPeriods2" value="2regBefore1" onclick="function1()">Before P1</button>
+			<button type="button" id="2reg1to2" name="regPeriods2" value="2reg1to2" onclick="function1()">Between P1 & P2</button>
+			<button type="button" id="2reg2to3" name="regPeriods2" value="2reg2to3" onclick="function1()">Between P2 & P3</button>
+			<button type="button" id="2reg3to4" name="regPeriods2" value="2reg3to4" onclick="function1()">Between P3 & P4</button>
+			<button type="button" id="2reg4to5" name="regPeriods2" value="2reg4to5" onclick="function1()">Between P4 & P5</button>
+			<button type="button" id="2reg5to6" name="regPeriods2" value="2reg5to6" onclick="function1()">Between P5 & P6</button>
+			<button type="button" id="2reg6to7" name="regPeriods2" value="2reg6to7" class="active" onclick="function1()">Between P6 & P7</button>						
+			<button type="button" id="2reg7to8" name="regPeriods2" value="2reg7to8" onclick="function1()">Between P7 & P8</button>						
+			<button type="button" id="2regAfterLast" name="regPeriods2" value="2regAfterLast" onclick="function1()">After Last Period</button>	
+			<br>
+			<br>
+			<p>Before or after Break?</p>
+			<button type="button" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" onclick="function1()">Before</button>
+			<button type="button" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" class="active" onclick="function1()">After</button>
+			<br>
+			<br>
+			<p>Before or after Lunch?</p>
+			<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" onclick="function1()">Before</button>
+			<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="active" onclick="function1()">After</button>
+			<br>
 			<br>
 			<p>Check your Timetable:</p>
 			<br>
 			<table id="templateTimetable"></table>
+			<br>
 			<br>
 			<label for="save">If this is correct : </label>
             <button type="button" id="save" name="save" value="Save" onclick="function1()">Save</button>
