Added activateButton function and functionality

--- a/timetable.html
+++ b/timetable.html
@@ -46,8 +46,8 @@
 			<br>
 			<br>
 			<p>How many Weeks in your timetable?</p>
-			<button type="button" id="1week" name="weeks" value="1" onclick="function1()">1</button>
-			<button type="button" id="2week" name="weeks" value="2" class="active" onclick="function1()">2</button>
+			<button type="button" id="1week" name="weeks" value="1" onclick="activateButton('weeks', 1)">1</button>
+			<button type="button" id="2week" name="weeks" value="2" class="active" onclick="activateButton('weeks', 2)">2</button>
 			<br>
 			<br>
 			<p>How many Periods in a Day?</p>
