hidden optional qs&as in CSS missed hide class fix

--- a/timetable.html
+++ b/timetable.html
@@ -62,9 +62,9 @@
 			<button type="button" id="lunch2to3" name="lunch" value="2" class="timetableBtn">Between P2 & P3</button>
 			<button type="button" id="lunch3to4" name="lunch" value="3" class="timetableBtn">Between P3 & P4</button>
 			<button type="button" id="lunch4to5" name="lunch" value="4" class="timetableBtn active">Between P4 & P5</button>
-			<button type="button" id="lunch5to6" name="lunch" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="lunch6to7" name="lunch" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="lunch7to8" name="lunch" value="7" class="timetableBtn">Between P7 & P8</button>						
+			<button type="button" id="lunch5to6" name="lunch" value="5" class="timetableBtn hide">Between P5 & P6</button>
+			<button type="button" id="lunch6to7" name="lunch" value="6" class="timetableBtn hide">Between P6 & P7</button>						
+			<button type="button" id="lunch7to8" name="lunch" value="7" class="timetableBtn hide">Between P7 & P8</button>						
 			<br>
 			<br>
 			<p>How many Breaks do you have?</p>
@@ -139,8 +139,8 @@
 			<br class = "regBreak2 hide">
 			<br class = "regBreak2 hide">
 			<p class = "regLunch2 hide">Before or after Lunch?</p>
-			<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="timetableBtn active">After</button>
+			<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" class="timetableBtn regLunch2 hide">Before</button>
+			<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="timetableBtn active regLunch2 hide">After</button>
 			<br class = "regLunch2 hide">
 			<br class = "regLunch2 hide">
 			<p>Check your Timetable:</p>
