--- a/timetable.html
+++ b/timetable.html
@@ -14,6 +14,7 @@
 	  <link rel="apple-touch-icon" sizes="144x144" href="Images/apple-icon-144x144.png">
 	  <link rel="apple-touch-icon" sizes="152x152" href="Images/apple-icon-152x152.png">
 	  <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png"> -->
+	  <script src="JS/p5.min.js"></script>
 	  <script src="JS/Script.js"></script>
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
