--- a/timetable.html
+++ b/timetable.html
@@ -43,7 +43,9 @@
     <div class="timetablePage mainPage">
         <form>
             <label for="upload">Upload previous File : </label>
-            <button type="button" id="upload" name="upload" value="Upload">Upload</button>
+			<input type="file" id="ttFile" name="upload" accept=".json">
+			<br>
+            <button type="button" id="upload" name="upload" value="Upload">Check it</button>
 			<br>
 			<br>
 			<p>How many Weeks in your timetable?</p>
