error message for wrong file type

--- a/timetable.html
+++ b/timetable.html
@@ -46,6 +46,7 @@
 			<input type="file" id="ttFile" name="upload" accept=".json">
 			<br>
             <button type="button" id="upload" name="upload" value="Upload">Check it</button>
+			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid template json file from this software.</p>
 			<br>
 			<br>
 			<p>How many Weeks in your timetable?</p>
