--- a/timetable.html
+++ b/timetable.html
@@ -47,6 +47,7 @@
 			<br>
             <button type="button" id="upload" name="upload" value="Upload">Check it</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid template json file from this software.</p>
+			<p class="hide invalidContents" id="invalidContents">Some or all of the values in the file uploaded were not able to be matched against expected values.  Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<br>
 			<br>
 			<p>How many Weeks in your timetable?</p>
