registration display issues resolved

--- a/timetable.html
+++ b/timetable.html
@@ -119,13 +119,13 @@
 			<br>
 			<br>
 			<p>Before or after Break?</p>
-			<button type="button" id="1regBeforeBreak" name="regBreak1" value="1regBeforeBreak" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterBreak" name="regBreak1" value="1regAfterBreak" class="timetableBtn active">After</button>
+			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn">Before</button>
+			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn active">After</button>
 			<br>
 			<br>
 			<p>Before or after Lunch?</p>
-			<button type="button" id="1regBeforeLunch" name="regLunch1" value="1regBeforeLunch" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterLunch" name="regLunch1" value="1regAfterLunch" class="timetableBtn active">After</button>
+			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn">Before</button>
+			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn active">After</button>
 			<br>
 			<br>
 			<p>When is the Second?</p>
@@ -141,13 +141,13 @@
 			<br>
 			<br>
 			<p>Before or after Break?</p>
-			<button type="button" id="2regBeforeBreak" name="regBreak2" value="2regBeforeBreak" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterBreak" name="regBreak2" value="2regAfterBreak" class="timetableBtn active">After</button>
+			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn">Before</button>
+			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn active">After</button>
 			<br>
 			<br>
 			<p>Before or after Lunch?</p>
-			<button type="button" id="2regBeforeLunch" name="regLunch2" value="2regBeforeLunch" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterLunch" name="regLunch2" value="2regAfterLunch" class="timetableBtn active">After</button>
+			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn">Before</button>
+			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn active">After</button>
 			<br>
 			<br>
 			<p>Check your Timetable:</p>
